@@ -1,0 +1,5 @@
+name=Heater
+type=multical803
+id=80808081
+#key=testing comment
+key=
